# flot-backend

./: .env.example  .gitignore  CLAUDE-CODE-BACKEND-PROMPT_v2.md  CLAUDE-CODE-BACKEND-PROMPT_v3-SCHEDULED.md  CLAUDE-CODE-BACKEND-PROMPT_v4-ELASTIC.md  FLOT-doc.html  MATCHING-GPS-UPGRADE-BACKEND.md  PAYMENT-DEADLOCK-BACKEND.md  event.json  flot-backend-action-plan-20260601.md  flot_api_contract.html  implementation_plan.md  pyproject.toml  response.json  samconfig.toml  task.md  template.yaml
.claude/: settings.local.json
.github/workflows/: deploy-dev.yml
docs/: cost-analysis-20260606.md
scripts/: cost_model.py  create_test_match.py  e2e_mvp_trips.py  force_match_fake_passenger.py  s3-notification.json  setup-s3-notification.sh  test-user.json  verify_mvp_matchmaking.py
src/lib/: __init__.py  airports.py  dynamo.py  eventbridge.py  flight_tracker.py  http.py  i18n.py  matching.py  metrics.py  notifications.py  places.py  schedulers.py  state_machine.py  trust.py  validation.py  websocket.py  zones.py
tests/: __init__.py  conftest.py
tests/events/: get_profile.json  list_airports.json  post_confirmation.json
tests/integration/: __init__.py  test_matchmaker_concurrency.py  test_multi_airport.py  test_notification_pipeline.py  test_stripe_flow.py  test_v4_e2e.py
tests/unit/: __init__.py  test_admin.py  test_airports.py  test_chat.py  test_dynamo.py  test_flight_tracker.py  test_flight_tracker_handler.py  test_i18n.py  test_matching.py  test_matchmaker.py  test_matchmaker_v4.py  test_metrics.py  test_mvp.py  test_notifications.py  test_photo_processing.py  (+11 more)
(+56 files in other folders)
