[project]
name = "flot-backend"
version = "0.1.0"
description = "Flot — Real-time taxi-pooling serverless backend"
requires-python = ">=3.12"
license = "UNLICENSED"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[dynamodb,s3,cognitoidp]>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "boto3-stubs[dynamodb,s3,cognito-idp]",
    "stripe>=9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
